@startuml Driagrama de Classes - Modelo de Domínio

class User {
    +Long userId PK
    +String login
    +String avatarUrl
    +String githubToken
    +String email
}

class Role {
    +Long roleId PK
    +String name
}

class KanbanBoard {
    +Long kanbanBoardId PK
    +String name
    +String description
    +String githubRepository
    +String githubOwnerName
    +String githubWebhookId
    +LocalDateTime createdAt
    +User owner FK
}

class KanbanMember {
    +Long kanbanMemberId PK
    +User user FK
    +String invitedStatus
    +LocalDateTime invitedAt
    +LocalDateTime joinedAt
}

class KanbanColumn {
    +Long kanbanColumnId PK
    +String name
    +Integer position
    +Boolean isColumnDone
}

class Issue {
    +Long issueId PK
    +String title
    +String body
    +Integer number
    +String state
    +LocalDateTime createdAt
    +KanbanColumn column FK
}

class Label {
    +Long labelId PK
    +String name
    +String color
    +String description
}

class Job {
    +Long jobId PK
    +String description
    +Long boardId
    +Long columnId
    +Long jwtToken
    +Long userId
    +String repository
}

User "*" -- "*" Role : tb_users_roles
KanbanBoard "1" --> "*" KanbanMember : members
KanbanBoard "1" --> "*" KanbanColumn : columns
KanbanMember "*" --> "1" User : user
KanbanColumn "1" --> "*" Issue : issues
Issue "*" -- "*" Label : tb_issue_label
Issue "*" -- "*" User : tb_issue_user (assignees)
KanbanBoard "*" --> "1" User : owner

@enduml
